# GSDCHEM

./: AUTHORS  Makefile.am  Makefile.in  README  aclocal.m4  compile  config.h.in  configure  configure.ac
src/: Makefile.am  Makefile.in
src/chem/: Makefile.am  Makefile.in  chemCap.F90  chem_methods.F90
src/chem/aero/: Makefile.am  Makefile.in  aero_soa_vbs_data_mod.F90  aero_soa_vbs_mod.F90
src/chem/dep/: Makefile.am  Makefile.in  dep_ctrans_grell_mod.F90  dep_cu_g3_mod.F90  dep_dry_gocart_mod.F90  dep_dry_mod.F90  dep_mod.F90  dep_simple_mod.F90  dep_vertmx_mod.F90  dep_wet_ls_mod.F90
src/chem/dust/: Makefile.am  Makefile.in  dust_afwa_mod.F90  dust_data_mod.F90  dust_fengsha_mod.F90  dust_gocart_mod.F90  dust_mod.F90
src/chem/gocart/: Makefile.am  Makefile.in  gocart_aerosols_mod.F90  gocart_chem_mod.F90  gocart_diag_mod.F90  gocart_dmsemis_mod.F90  gocart_mod.F90  gocart_model_mod.F90  gocart_prep_mod.F90  gocart_settling_mod.F90
src/chem/opt/: Makefile.am  Makefile.in  opt_aer_out_mod.F90  opt_aer_ra_mod.F90  opt_averaging_mod.F90  opt_data_mod.F90  opt_driver_mod.F90  opt_gocart_mod.F90  opt_peg_util_mod.F90
src/chem/plume/: Makefile.am  Makefile.in  plume_data_mod.F90  plume_rise_mod.F90  plume_scalar_mod.F90  plume_zero_mod.F90
src/chem/seas/: Makefile.am  Makefile.in  seas_data_mod.F90  seas_mod.F90  seas_ngac_mod.F90
src/chem/shr/: Makefile.am  Makefile.in  chem_clock_mod.F90  chem_comm_mod.F90  chem_config_mod.F90  chem_const_mod.F90  chem_core_mod.F90  chem_data_mod.F90  chem_domain_mod.F90  chem_io_mod.F90  chem_iodata_mod.F90  chem_iolayout_mod.F90  chem_model_mod.F90  chem_rc_mod.F90  chem_shr_mod.F90  chem_species_mod.F90  chem_state_mod.F90  chem_tracers_mod.F90  chem_types_mod.F90  chem_vars_mod.F90  units.F90
src/chem/vash/: Makefile.am  Makefile.in  vash_settling_mod.F90
src/mpp/: Makefile.am  Makefile.in
src/mpp/include/: mpp_io_write.inc  mpp_read_compressed.h
src/util/: Makefile.am  Makefile.in  time_mod.F90
test/: input.nml  jobscript.sh  nuopc.runconfig
